apps/base/journal/journal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal
  namespace: journal
  labels:
    app: journal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal
  template:
    metadata:
      namespace: journal
      labels:
        app: journal
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: journal
        image: elifesciences/journal:d1f096c9819215532e1f9bf3c3c3f6c44a101b8d
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: asset-files
          mountPath: /srv/nginx/web
        - name: journal-config-volume
          mountPath: /srv/journal/app/config/parameters.yml
          subPath: parameters.yml
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /srv/journal/web/assets /srv/journal/web/favicon.ico /srv/nginx/web/"]

      - name: nginx
        image: nginx:1.21.6
        ports:
        - containerPort: 80
        volumeMounts:
        - name: asset-files
          mountPath: /srv/journal/web
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: asset-files
        emptyDir: {}

      - name: nginx-config-volume
        configMap:
          name: nginx-config

      - name: journal-config-volume
        configMap:
          name: journal-config
