apps/base/journal/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: journal
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      namespace: journal
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: "redis:7.0.0"
        ports:
        - containerPort: 6379
