apps/base/journal/api-dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dummy
  namespace: journal
spec:
  selector:
    app: api-dummy
  ports:
  - port: 8080
