apps/base/journal/journal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal
  namespace: journal
spec:
  selector:
    app: journal
  ports:
  - port: 80
