apps/base/journal/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: journal
spec:
  selector:
    app: redis
  ports:
  - port: 6379
