apps/base/journal/journal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal
  namespace: journal
  annotations:
    external-dns.alpha.kubernetes.io/target: kubepi.aubrey.org.uk
spec:
  tls:
  - hosts:
    - journal.kubepi.aubrey.org.uk
  rules:
  - host: journal.kubepi
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: journal
            port:
              number: 80
  - host: journal.kubepi.aubrey.org.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: journal
            port:
              number: 80
